Added (untested) instructions for opening the GUI application